# tarea-2-paralelos

./: .gitignore  README.md
TaskAppParalelos/: settings.gradle.kts
TaskAppParalelos/app/: build.gradle.kts  google-services.json
TaskAppParalelos/app/src/androidTest/java/com/example/taskappparalelos/: ExampleInstrumentedTest.java
TaskAppParalelos/app/src/main/: AndroidManifest.xml
TaskAppParalelos/app/src/main/java/com/example/taskappparalelos/: ApplicationClass.java
TaskAppParalelos/app/src/main/res/drawable/: assign_card_background.xml  gray_card_background.xml  ic_assigned_tasks.xml  ic_back.xml  ic_task.xml  ic_user.xml  input_background.xml  item_avatar_background.xml  item_task_background.xml  task_card_background.xml  user_card_background.xml
TaskAppParalelos/app/src/main/res/layout/: activity_home.xml  activity_image.xml  activity_main.xml  activity_task.xml  activity_task_assigned.xml  activity_task_form.xml  activity_user.xml  activity_user_form.xml  item_image_preview.xml  item_task.xml  item_task_assigned.xml  item_user.xml
TaskAppParalelos/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
TaskAppParalelos/app/src/main/res/values-night/: themes.xml
TaskAppParalelos/gradle/wrapper/: gradle-wrapper.properties
actix-web-api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  init.sql  rust_api  tasks.rs
actix-web-api/.do/: app.yaml
actix-web-api/rust_api/: Cargo.toml  Dockerfile
actix-web-api/rust_api/src/: Cargo.toml  main.rs
actix-web-api/src/: main.rs
(+39 files in other folders)
