[package]
name = "tarea-2-paralelos"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "24.0.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "uuid", "time"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.4", features = ["v4", "serde"] }
