[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"
description = "A REST API with MySQL integration for user authentication"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
actix-multipart = "0.6"
actix-web = "4.4"
futures = "0.3"
mysql = "24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
bcrypt = "0.10"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
